--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "generate-exclude-cs",
   "displayName": "generate-exclude-cs",
+  "publisher": "basse",
   "description": "Generates a settings.json file for excluding some C# folders, files and some vs code and vs folders.",
   "version": "1.0.0",
+  "repository": {
+    "url": "https://github.com/Sebbev/generate-exclude-cs/"
+  },
   "engines": {
     "vscode": "^1.49.0"
   },
